--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -1,20 +1,17 @@
-name: Deploy to Firebase Hosting on merge
-
-on:
-  push:
-    branches:
-      - main
-
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-
-    steps:
+steps:
     - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
-      with:
-        node-version: '18'
-    - run: npm install -g firebase-tools
-    - run: npm install
-    - run: npm run build
-    - run: firebase deploy --token ${{ secrets.FIREBASE_TOKEN }}
+
+    - name: Install dependencies
+      run: |
+        cd TiksiHehku
+        npm install
+
+    - name: Build project
+      run: |
+        cd TiksiHehku
+        npm run build
+
+    - name: Deploy to Firebase
+      run: |
+        cd TiksiHehku
+        firebase deploy --token ${{ secrets.FIREBASE_TOKEN }}
