--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
-
 {
   "name": "tiksihehku",
   "version": "1.0.0",
   "main": "App.js",
   "scripts": {
     "start": "expo start",
-    "build": "echo 'rakennusvalmis'"
+    "build": "expo export:web"
   },
   "dependencies": {
+    "expo": "~48.0.0",
     "react": "^18.0.0",
-    "react-native": "0.71.0",
-    "expo": "~48.0.0"
+    "react-native": "0.71.0"
   }
 }
