--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "tiksihehku",
   "version": "1.0.0",
@@ -10,6 +9,9 @@
   "dependencies": {
     "expo": "~48.0.0",
     "react": "^18.0.0",
-    "react-native": "0.71.0"
+    "react-native": "0.71.0",
+    "react-native-web": "~0.18.10",
+    "react-dom": "18.2.0",
+    "@expo/webpack-config": "^18.0.1"
   }
 }
