--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "build": "expo export:web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
     "expo": "~48.0.0",
+    "firebase": "^11.7.1",
     "react": "^18.0.0",
-    "react-native": "0.71.0",
-    "react-native-web": "~0.18.10",
     "react-dom": "18.2.0",
-    "@expo/webpack-config": "^18.0.1"
+    "react-native": "0.71.0",
+    "react-native-web": "~0.18.10"
   }
 }
