--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
+    "@react-navigation/drawer": "^7.3.12",
+    "@react-navigation/native": "^7.1.9",
     "expo": "~48.0.0",
     "firebase": "^11.7.1",
     "react": "^18.0.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.0",
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-reanimated": "^3.17.5",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.10.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.18.10"
   }
 }
