--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -16,7 +16,7 @@ jobs:
       run: npm install
 
     - name: Build project
-      run: npm run build
+    - run: expo export --platform web
 
     - name: Install Firebase CLI
       run: npm install -g firebase-tools
