--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -15,9 +15,9 @@ jobs:
         with:
           node-version: 18
 
-      - run: npm install -g expo-cli
+      - run: npm install -g expo
       - run: npm install --legacy-peer-deps
-      - run: expo export --platform web
+      - run: expo export --platform web --public-url https://tiksihehku.web.app
 
       - run: npm install -g firebase-tools
       - run: firebase deploy --only hosting --token ${{ secrets.FIREBASE_TOKEN }}
