--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -17,7 +17,8 @@ jobs:
 
       - run: npm install -g expo
       - run: npm install --legacy-peer-deps
-      - run: expo export --platform web --public-url https://tiksihehku.web.app
+      - run: expo export --platform web
+
 
       - run: npm install -g firebase-tools
       - run: firebase deploy --only hosting --token ${{ secrets.FIREBASE_TOKEN }}
