--- a/app.json
+++ b/app.json
@@ -2,8 +2,8 @@
   "expo": {
     "name": "TiksiHehku",
     "slug": "tiksihehku",
-    "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
-    "sdkVersion": "53.0.0"
+    "sdkVersion": "53.0.0",
+    "platforms": ["ios", "android", "web"]
   }
 }
