--- a/package.json
+++ b/package.json
@@ -2,25 +2,26 @@
   "name": "tiksihehku",
   "version": "1.0.0",
   "main": "App.js",
-  "platforms": ["ios", "android", "web"],
   "scripts": {
     "start": "expo start",
-    "build": "expo export --platform web"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^18.0.1",
-    "@react-navigation/drawer": "^7.3.12",
-    "@react-navigation/native": "^7.1.9",
-    "expo": "~53.0.0",
-    "firebase": "^11.7.1",
-    "react": "^18.2.0",
+    "expo": "~48.0.0",
+    "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.0",
-    "react-native-gesture-handler": "^2.25.0",
-    "react-native-reanimated": "^3.17.5",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "^4.0.0",
-    "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.18.10"
+    "react-native": "0.71.8",
+    "react-native-web": "~0.18.10",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-reanimated": "^2.14.4",
+    "react-native-screens": "^3.20.0",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/drawer": "^6.6.2",
+    "firebase": "^11.7.1"
+  },
+  "devDependencies": {
+    "babel-preset-expo": "^9.6.0"
   }
 }
