--- a/app.json
+++ b/app.json
@@ -1,22 +1,34 @@
 {
   "expo": {
     "name": "TiksiHehku",
-    "slug": "tiksihehku",
-    "platforms": ["ios", "android", "web"],
+    "slug": "TiksiHehku",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#000000"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
     "assetBundlePatterns": ["**/*"],
+    "ios": {
+      "supportsTablet": true,
+      "bundleIdentifier": "com.TiksiHehku.TiksiHehku"
+    },
+    "android": {
+      "package": "com.TiksiHehku.TiksiHehku",
+      "versionCode": 1
+    },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "4096e324-34ec-4d29-9165-8a89a476a356"
+      }
     }
   }
 }
