--- a/package.json
+++ b/package.json
@@ -1,27 +1,52 @@
 {
   "name": "tiksihehku",
   "version": "1.0.0",
-  "main": "App.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "export": "expo export --platform web"
   },
   "dependencies": {
-    "expo": "~48.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-web": "~0.18.10",
-    "react-native-gesture-handler": "^2.9.0",
-    "react-native-reanimated": "^2.14.4",
-    "react-native-screens": "^3.20.0",
-    "@react-navigation/native": "^6.1.6",
+    "@expo/metro-runtime": "~5.0.4",
+    "@livekit/components-react": "^2.9.9",
     "@react-navigation/drawer": "^6.6.2",
-    "firebase": "^11.7.1"
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^7.3.2",
+    "eas-cli": "^16.6.1",
+    "expo": "^53.0.9",
+    "expo-av": "~15.1.4",
+    "expo-constants": "~17.1.6",
+    "expo-linear-gradient": "~14.1.4",
+    "expo-localization": "~16.1.5",
+    "expo-router": "~5.0.7",
+    "expo-status-bar": "~2.2.3",
+    "firebase": "^11.8.1",
+    "i18n-js": "^3.8.0",
+    "livekit-client": "^2.13.3",
+    "livekit-react": "^0.9.2",
+    "livekit-server-sdk": "^2.13.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^9.6.0"
-  }
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.45",
+    "typescript": "^5.3.3"
+  },
+  "private": true,
+  "description": "**Päivitetty:** 26.05.2025",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs"
 }
