--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
     "export": "expo export --platform web"
   },
   "dependencies": {
+    "@expo/config-plugins": "~10.0.0",
     "@expo/metro-runtime": "~5.0.4",
+    "@expo/prebuild-config": "~9.0.0",
     "@livekit/components-react": "^2.9.9",
-    "@react-navigation/drawer": "^6.6.2",
-    "@react-navigation/native": "^6.1.6",
-    "@react-navigation/native-stack": "^6.9.12",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-navigation/drawer": "^7.3.9",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.3.2",
-    "eas-cli": "^16.6.1",
+    "eas-cli": "^16.7.0",
     "expo": "^53.0.9",
     "expo-av": "~15.1.4",
     "expo-constants": "~17.1.6",
+    "expo-document-picker": "~13.1.5",
+    "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.4",
     "expo-localization": "~16.1.5",
     "expo-router": "~5.0.7",
@@ -27,7 +32,6 @@
     "firebase": "^11.8.1",
     "i18n-js": "^3.8.0",
     "livekit-client": "^2.13.3",
-    "livekit-react": "^0.9.2",
     "livekit-server-sdk": "^2.13.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -40,7 +44,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~19.0.10",
     "typescript": "^5.3.3"
   },
   "private": true,
