--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.3.2",
     "eas-cli": "^16.7.0",
-    "expo": "^53.0.9",
+    "expo": "53.0.9",
     "expo-av": "~15.1.4",
     "expo-constants": "~17.1.6",
     "expo-document-picker": "~13.1.5",
@@ -31,6 +31,7 @@
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.8.1",
     "i18n-js": "^3.8.0",
+    "install": "^0.13.0",
     "livekit-client": "^2.13.3",
     "livekit-server-sdk": "^2.13.0",
     "react": "19.0.0",
@@ -39,7 +40,7 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
