--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "@expo/metro-runtime": "~5.0.4",
     "@expo/prebuild-config": "~9.0.0",
     "@livekit/components-react": "^2.9.9",
+    "@livekit/components-styles": "^1.1.6",
+    "@livekit/react-native": "^2.7.4",
+    "@livekit/react-native-webrtc": "^125.0.9",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-picker/picker": "2.11.0",
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.3.2",
+    "cors": "^2.8.5",
     "eas-cli": "^16.7.0",
     "expo": "53.0.9",
     "expo-av": "~15.1.4",
@@ -29,6 +34,7 @@
     "expo-localization": "~16.1.5",
     "expo-router": "~5.0.7",
     "expo-status-bar": "~2.2.3",
+    "express": "^5.1.0",
     "firebase": "^11.8.1",
     "i18n-js": "^3.8.0",
     "install": "^0.13.0",
