--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
     "@react-navigation/stack": "^7.3.2",
     "cors": "^2.8.5",
     "eas-cli": "^16.7.0",
-    "expo": "53.0.9",
-    "expo-av": "~15.1.4",
+    "expo": "^53.0.10",
+    "expo-av": "~15.1.5",
     "expo-constants": "~17.1.6",
+    "expo-dev-client": "~5.2.0",
     "expo-document-picker": "~13.1.5",
     "expo-image-picker": "~16.1.4",
-    "expo-linear-gradient": "~14.1.4",
+    "expo-linear-gradient": "~14.1.5",
     "expo-localization": "~16.1.5",
     "expo-router": "~5.0.7",
     "expo-status-bar": "~2.2.3",
@@ -42,7 +43,7 @@
     "livekit-server-sdk": "^2.13.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "^0.79.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
@@ -59,5 +60,15 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs"
+  "type": "commonjs",
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "@livekit/react-native",
+          "@livekit/react-native-webrtc"
+        ]
+      }
+    }
+  }
 }
