--- a/app.json
+++ b/app.json
@@ -35,6 +35,9 @@
         "projectId": "4096e324-34ec-4d29-9165-8a89a476a356"
       }
     },
-    "owner": "dark82"
+    "owner": "dark82",
+    "plugins": [
+      "expo-router"
+    ]
   }
 }
