--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "tiksihehku",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
@@ -31,29 +30,32 @@
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.5",
     "expo-localization": "~16.1.5",
-    "expo-router": "~5.0.7",
+    "expo-router": "~5.1.0",
     "expo-status-bar": "~2.2.3",
+    "expo-updates": "~0.28.14",
     "express": "^5.1.0",
-    "firebase": "^11.9.0",
+    "firebase": "^9.22.2",
     "i18n-js": "^3.8.0",
     "install": "^0.13.0",
     "livekit-client": "^2.13.3",
     "livekit-server-sdk": "^2.13.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "^0.79.3",
+    "react-native": "0.79.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.20.0",
+    "react-native-webrtc": "^124.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@expo/config-plugins": "~10.0.0",
     "@expo/prebuild-config": "~9.0.0",
     "@types/react": "~19.0.10",
+    "@types/react-native": "^0.72.8",
     "typescript": "^5.3.3"
   },
   "private": true,
